added OG, logo, styling fixes

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:og='http://ogp.me/ns#'>
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>FoodBank Distribution Map</title>
+    <!-- Open Graph Meta Tags BEGIN -->
+    <meta expr:content='FoodBank Distribution Map' property='og:title'/>
+    <meta expr:content='https://static.tildacdn.com/tild3538-3063-4339-b030-363963393639/join-social.jpg' property='og:image'/>
+    <meta expr:content='FoodBank Distribution Map' property='og:title'/>
+    <meta expr:content='https://foodbank.co' property='og:url'/>
+    <meta expr:content='Matching service for help seekers, donors and food distribution initiatives' property='og:description'/>
+    <!-- Open Graph Meta Tags END -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
