--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>FoodBank Distribution Map</title>
     <!-- Open Graph Meta Tags BEGIN -->
-    <meta expr:content='FoodBank Distribution Map' property='og:title'/>
-    <meta expr:content='https://static.tildacdn.com/tild3538-3063-4339-b030-363963393639/join-social.jpg' property='og:image'/>
-    <meta expr:content='FoodBank Distribution Map' property='og:title'/>
-    <meta expr:content='https://foodbank.co' property='og:url'/>
-    <meta expr:content='Matching service for help seekers, donors and food distribution initiatives' property='og:description'/>
+    <meta content='FoodBank Distribution Map' property='og:title'/>
+    <meta content='https://static.tildacdn.com/tild3538-3063-4339-b030-363963393639/join-social.jpg' property='og:image'/>
+    <meta content='FoodBank Distribution Map' property='og:title'/>
+    <meta content='https://foodbank.co' property='og:url'/>
+    <meta content='Matching service for help seekers, donors and food distribution initiatives' property='og:description'/>
     <!-- Open Graph Meta Tags END -->
   </head>
   <body>
