--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta content='FoodBank Distribution Map' property='og:title'/>
     <meta content='https://static.tildacdn.com/tild3538-3063-4339-b030-363963393639/join-social.jpg' property='og:image'/>
     <meta content='FoodBank Distribution Map' property='og:title'/>
-    <meta content='https://foodbank.co' property='og:url'/>
+    <meta content='https://foodbankco.netlify.app/' property='og:url'/>
     <meta content='Matching service for help seekers, donors and food distribution initiatives' property='og:description'/>
     <!-- Open Graph Meta Tags END -->
   </head>
