--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
     <title>FoodBank Distribution Map</title>
     <!-- Open Graph Meta Tags BEGIN -->
     <meta content='FoodBank Distribution Map' property='og:title'/>
