--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	  <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
+    <style type="text/css">
+      .word-break{
+        word-break: break-all;
+      }
+    </style>
     <title>FoodBank Distribution Map</title>
     <!-- Open Graph Meta Tags BEGIN -->
     <meta content='FoodBank Distribution Map' property='og:title'/>
