--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       .word-break{
         word-break: break-all;
       }
+      .word-break-word{
+        word-break: break-word;
+      }
     </style>
     <title>FoodBank Distribution Map</title>
     <!-- Open Graph Meta Tags BEGIN -->
